Fixes after the merge
